# Backtesting-Investment-Strategies

./: LICENSE  README.md  manual.ipynb  pyproject.toml  test.py  test_yf.ipynb  univers_actions.xlsx
API/: binance_api.py
apis/: binance_api.py  yahoo_api.py
backtest-qis/: backtester.py  main.py  results.py  strategy.py  test.py  tools.py
backtester_poo_272_mcd/: backtester.py  data_input.py  exceptions.py  results.py
backtester_poo_272_mcd/data/: cac40.json  crypto_data.json  eurostoxx50.json  nikkei.json  univers_actions.json
backtester_poo_272_mcd/data_inputs/: __init__.py  custom_input.py  df_input.py  yahoo_api.py
backtester_poo_272_mcd/strategies/: __init__.py  abstract_strategy.py  exotic_strategies.py  risk_premia_strategies.py
backtester_poo_272_mcd/tools/: enums.py  timer.py
data/: cac40.xlsx  crypto_data.xlsx  custom.xlsx  eurostoxx50.xlsx  nikkei.xlsx  sp500.xlsx  spx500.xlsx
docs/: Liens projet.txt
my_package/: __init__.py  backtester.py  data_input.py  results.py  strategy.py
my_package/data_inputs/: __init__.py  abstract_source.py  binance_api.py  bloomberg_api.py  custom_input.py  df_input.py  yahoo_api.py
my_package/strategies/: __init__.py  abstract_strategy.py  optimization_strategies.py  risk_premia_strategies.py  simple_strategies.py
my_package/tools/: __init__.py  enums.py
src/: backtester.py  binance_api.py  custom_input.py  data_input.py  df_input.py  exeptions.py  main.py  results.py  strategy.py  tools.py  yahoo_api.py
src/data_inputs/: binance_api.py  (+5 more)
tests/: test_backtester.py  test_dataInput.py  test_results.py
