[tool.poetry]
name = "backtest-investment-strategies-poo"
version = "0.1.0"
description = "POO Project for backtesting investment strategies"
authors = ["baptistedfr <bapdufo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
yfinance = "^0.2.46"
ipykernel = "^6.29.5"
yahoo-fin = "^0.8.9.1"
pycoingecko = "^3.1.0"
binance = "^0.3"
python-binance = "^1.0.21"
openpyxl = "^3.1.5"
matplotlib = "^3.9.2"
plotly = "^5.24.1"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
